# ecommerce-frontend

./: README.md  pyproject.toml  requirements.txt
frontend/services/: api_client.py
scripts/: setup.sh
