[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-frontend"
version = "0.1.0"
description = "E-commerce price tracking frontend dashboard"
authors = [
    { name = "Hasan Erdin" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.30",
    "requests>=2.31",
    "plotly>=5.18",
    "pandas>=2.0"
]

[tool.setuptools.packages.find]
where = ["."]
